# desktop-shell

./: .gitignore  README.md  app.ts  config.json.example  env.d.ts  hyprland.conf  mabictl.sh  meson.build  message.ts  package.json  run-dev.sh  run.template.sh  style.scss  tsconfig.json  uncrustify.cfg
bar/: audio.tsx  badge-widgets.ts  bar.tsx  battery.tsx  left-section.tsx  network.tsx  right-section.tsx  tray.tsx  workspaces.tsx
notification/: notification.tsx  popups.tsx  tracker.ts
notification-center/: click-capturer.tsx  flexbox-layout.ts  media.blp  media.ts  notification-center.tsx  notification-list.tsx  notification.tsx  weather-panel.tsx
osd/: listener-brightness.ts  listener-wireplumber.ts  listeners.ts  osd.tsx
shell/: app.vala  ipc.vala  mabi-shell.gresource.xml  meson.build  style.scss  style.vala
shell/bar/: bar.blp  bar.vala  power-button.blp  power-button.vala  time-button.blp  time-button.vala
shell/service/: time.vala
shell/style/: activate.scss  bar.scss  click-capture.scss  notification.scss
style/: _theme.scss  bar.scss  click-capture.scss  notification-center.scss  notification.scss  osd.scss
utils/: color.ts  config.ts  counting-map.ts  location.ts  message.ts  network.ts  notifier.ts  sound.ts  system-stats.ts  time.ts  timer.ts  usage-badge.ts  weather.ts
widget/: Bar.tsx
widgets/: activate.tsx  calendar.ts  menu.ts  plain-window.ts  progress-bar.ts  regular-window.ts  scrolled-window.ts  separator.ts  status-page.ts  toggle-button.ts  wrap-box.ts
